# youtube-skills

./: .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/: learnings.jsonl
.agents/commands/: README.md
.agents/reference/: README.md  api-conventions.md  security-guidelines.md  testing-strategy.md
.agents/templates/: plan-template.md  prd-template.md  retro-template.md
.github/ISSUE_TEMPLATE/: config.yml
docs/: CONVENTIONS.md
docs/adr/: 000-template.md  README.md
skills/claude-youtube/execution/: fetch_channel_data.py  fetch_transcript.py  fetch_video_analytics.py  search_competitor_videos.py
skills/claude-youtube/execution/utils/: quota_tracker.py  youtube_auth.py
tests/: conftest.py  test_fetch_channel_data.py  test_fetch_transcript.py  test_fetch_video_analytics.py  test_quota_tracker.py  test_search_competitor_videos.py  test_youtube_auth.py
